--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@liveblocks/client": "^1.11.0",
     "@liveblocks/react": "^1.11.0",
     "@liveblocks/react-comments": "^1.11.0",
+    "canvas": "^2.11.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "fabric": "^5.3.0",
@@ -24,6 +25,7 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/fabric": "^5.3.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
